# teleshell

./: LICENSE  README.md  cabal.project  default.nix  shell.nix  teleshell.cabal
app/: Main.hs
example/: Main.hs
nix/haskell/: bytestring-substring.nix
sample/: zhone_port_rate_limit.txt  zhone_system_info.txt  zhone_vlan.txt
src/: Teleshell.hs
src/Data/ByteString/: Substring.hs
src/Network/: Teleshell.hs  Zhone.hs
src/Pipes/ByteString/: Substring.hs
test/: Spec.hs
