cabal-version: 2.0
name:
  teleshell
version:
  0.2
synopsis:
  telnet client
description:
  using the Pipes bidirectional communication machinery to
  perform commands at telnet prompts and handle responses
homepage:
  https://github.com/andrewthad/teleshell
license:
  BSD3
license-file:
  LICENSE
author:
  Andrew Martin
  chessai
maintainer:
  Andrew Martin <andrew.thaddeus@gmail.com>
  chessai <chessai1996@gmail.com>
copyright:
  2019 Andrew Martin
  2019 chessai
category:
  Network
build-type:
  Simple

library
  exposed-modules:
    Teleshell
  build-depends:
      base >= 4.11 && < 5
    , bytestring >= 0.10 && < 0.11
    , bytestring-substring >= 0.1 && < 0.2
    , pipes >= 4.3 && < 4.4
    , sockets >= 0.3 && < 0.4
    , stm >= 2.4 && < 2.6
    , transformers >= 0.5 && < 0.6
  hs-source-dirs:
    src
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/andrewthad/teleshell
